# kenquest

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  nginx.conf  pyproject.toml
.dlt/: config.toml
.github/workflows/: ci.yml
backend/: config.py  dependencies.py  main.py  utils.py
backend/api/: graph.py  progress.py  topics.py  tutor.py
backend/db/: duckdb_client.py  schema.sql
backend/extraction/: __init__.py  concept_extractor.py  graph_builder.py  nlp_extractor.py  prompts.py
backend/graph/: queries.py  store.py
backend/ingestion/: destinations.py  pipeline.py
backend/ingestion/sources/: arxiv.py  doab.py  openstax.py  opentextbook.py  wikibooks.py  wikipedia.py
backend/models/: concept.py  progress.py  quiz.py  topic.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/KnowledgeMap/: KnowledgeMap.tsx
frontend/src/components/TutorPanel/: TutorPanel.tsx
scripts/: build_topic.py  reingest.py
tests/: conftest.py  test_health.py
tests/test_extraction/: test_concept_extractor.py
tests/test_graph/: test_queries.py
tests/test_ingestion/: test_pipeline_live.py  test_sources.py
