[project]
name = "kenquest"
version = "0.1.0"
description = "Self-hosted AI learning platform with prerequisite-aware knowledge graphs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.34.0,<1.0",
    "pydantic>=2.10.0,<3.0",
    "pydantic-settings>=2.7.0,<3.0",
    "sse-starlette>=2.2.0,<3.0",
    "dlt[duckdb]>=1.23.0,<2.0",
    "duckdb>=1.5.0,<2.0",
    "falkordb>=1.0.0,<2.0",
    "chromadb>=1.5.0,<2.0",
    "sentence-transformers>=3.4.0,<4.0",
    "litellm>=1.82.0,<2.0",
    "httpx>=0.28.0,<1.0",
    "tenacity>=9.0.0,<10.0",
    "matplotlib>=3.10.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0",
    "pytest-asyncio>=0.25.0,<1.0",
    "ruff>=0.11.0,<1.0",
    "pyrefly>=0.56.0,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyrefly]
project_includes = ["backend", "tests"]
